# lem_in_42

./: README.md
lem-in/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  3  4  5  6  7  8  9  CMakeLists.txt  Makefile  ggg  kjh  lem-in  lem_in  test0  test1  test10  test11  test13  test14  test2  test3  test4  (+7 more)
lem-in/Result/: 1.map  20.map  9_path_depth_10_ants.map  9_path_depth_2_ants.map  9_path_depth_4_ants.map  9_path_depth_8_ants.map  9_path_depth_9_ants.map  err_3_coordinates.map  err_duplicate.map  err_empty.map  err_letter_in_coordinate.map  err_no_ants.map  err_no_ants2.map  err_no_links.map  err_start_end_same.map  err_too_few_ants.map
lem-in/ft_printf/: CMakeLists.txt  Makefile  author
lem-in/includes/: lem_in.h
lem-in/libft/: Makefile  author  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_countwords.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_math.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_new_two.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sort.c  ft_strcat.c  ft_strchr.c  (+32 more)
lem-in/src/: lem_atoi.c  lem_in_bfs.c  lem_in_bfs_2.c  lem_in_bfs_3.c  lem_in_bfs_expand.c  lem_in_bfs_expand_2.c  lem_in_bfs_expand_3.c  lem_in_bfs_expand_4.c  lem_in_bfs_expand_5.c  lem_in_bfs_expand_6.c  lem_split.c  main.c  memory_deleter.c  move_ants_1.c
(+19 files in other folders)
